docs/vocabulary/_sources/type/BoundingBox/v5/index.rst.txt
:orphan:

BoundingBox (v5)
================

- **Previous Version:** :doc:`v4 <../v4/index>`
- **URI:** `http://clams.ai/vocabulary/type/BoundingBox/v5 <http://clams.ai/vocabulary/type/BoundingBox/v5>`_
- **Shortname:** ``BoundingBox``
- **Inherits from:** :doc:`Polygon (v5) <../../Polygon/v5/index>`
- **Included in:** :doc:`1.1.0 <../../../1.1.0/index>`, :doc:`1.1.1 <../../../1.1.1/index>`, :doc:`1.1.2 <../../../1.1.2/index>`, :doc:`1.1.3 <../../../1.1.3/index>`, :doc:`1.2.0 <../../../1.2.0/index>`
- **Also Known As:** This type is also accessible at the following legacy URLs for backward compatibility:

  - `http://mmif.clams.ai/vocabulary/BoundingBox/v5 <http://mmif.clams.ai/vocabulary/BoundingBox/v5>`_

Description
-----------

A rectangular object in an image or video. At the moment it does not have features that would not make any sense on its parent type Polygon so technically we can do without BoundingBox, but it was introduced because the term is in widespread use.


Properties
----------

Synopsis
^^^^^^^^

*Properties marked with* **\*** *are required.*

.. list-table::
   :header-rows: 1
   :widths: 40 40 20
   :align: left

   * - Property
     - Type
     - Origin
   * - :ref:`BoundingBox-v5-boxType`
     - string
     - *native*
   * - :ref:`BoundingBox-v5-coordinates` **\***
     - array of array
     - :doc:`Polygon (v5) <../../Polygon/v5/index>`
   * - :ref:`BoundingBox-v5-timePoint`
     - integer
     - :doc:`Polygon (v5) <../../Polygon/v5/index>`
   * - :ref:`BoundingBox-v5-timeUnit`
     - string
     - :doc:`Region (v5) <../../Region/v5/index>`
   * - :ref:`BoundingBox-v5-classification`
     - object
     - :doc:`Annotation (v6) <../../Annotation/v6/index>`
   * - :ref:`BoundingBox-v5-classifications`
     - object
     - :doc:`Annotation (v6) <../../Annotation/v6/index>`
   * - :ref:`BoundingBox-v5-document`
     - string
     - :doc:`Annotation (v6) <../../Annotation/v6/index>`
   * - :ref:`BoundingBox-v5-label`
     - string
     - :doc:`Annotation (v6) <../../Annotation/v6/index>`
   * - :ref:`BoundingBox-v5-labelset`
     - array of string
     - :doc:`Annotation (v6) <../../Annotation/v6/index>`
   * - :ref:`BoundingBox-v5-labelsetUri`
     - string
     - :doc:`Annotation (v6) <../../Annotation/v6/index>`
   * - :ref:`BoundingBox-v5-id` **\***
     - string
     - :doc:`Thing (v1) <../../Thing/v1/index>`


Native
^^^^^^


.. _BoundingBox-v5-boxType:

``boxType``
"""""""""""

- type: *string*
- required: no

The type of BoundingBox. Mostly used for text boxes where we use the value text.

No longer encouraged to use, and instead ``label`` property should replace this property.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Polygon (v5) <../../Polygon/v5/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _BoundingBox-v5-coordinates:

``coordinates``
"""""""""""""""

- type: *array of array*
- required: yes

The coordinates of the polygon, taking the top-left of the image as the origin (0,0). Unit used to measure the distance is the number of pixels.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


.. _BoundingBox-v5-timePoint:

``timePoint``
"""""""""""""

- type: *integer*
- required: no

If on a video stream, the TimePoint that the BoundingBox occurs in.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Region (v5) <../../Region/v5/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _BoundingBox-v5-timeUnit:

``timeUnit``
""""""""""""

- type: *string*
- required: no

Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*. If not specified, *milliseconds* (in whole numbers) is assumed.

.. note::

   This property is only relevant for time-based annotations.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Annotation (v6) <../../Annotation/v6/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _BoundingBox-v5-classification:

``classification``
""""""""""""""""""

- type: *object*
- required: no

A map from label values to their "score" numbers provided by a classifier. The score can be probability, similarity, confidence, or any other real number that was used to determine the label value.

*Optional* on top of the ``label`` property. However when this property is used, the ``label`` property must be one of the keys and the keys must match to the values defined in the ``labelset`` or ``labelsetUri`` properties.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


.. _BoundingBox-v5-classifications:

``classifications``
"""""""""""""""""""

- type: *object*
- required: no

Alias for the ``classification`` property. Here for historical reasons.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


.. _BoundingBox-v5-document:

``document``
""""""""""""

- type: *string*
- required: no

The identifier of the document that the annotation is over.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


.. _BoundingBox-v5-label:

``label``
"""""""""

- type: *string*
- required: no

A label given to this object by classification. The value must be a simple string value of the label and must be one of the values defined in the ``labelset`` or ``labelsetUri`` properties.

For example, for the ``Sentence`` subtype, this could be used to indicate the type of sentence, such as "declarative", "interrogative", "exclamatory", etc. For ``NamedEntity`` subtype, this could be used to indicate the type of named entity, such as "PER", "ORG", "LOC", "MISC" (following the CoNLL-2003 labels).

For non-linguistic annotations, for example for ``TimeFrame``, this could be used to indicate the type of the time frame, such as "speech", "music", "noise", "bars-and-tones", etc, for acoustic classification. Or "slate", "lower-third", "credits" for visual classification of video frames.

.. note::

   Annotations from a type of classifier model must have this property.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


.. _BoundingBox-v5-labelset:

``labelset``
""""""""""""

- type: *array of string*
- required: no

When an annotation object contains results of a classification task, this property is used to specify the label values used in classification. Individual annotations then must have ``label`` property that is one of the values in this list.

.. note::

   Annotations from a classifier app must have this property or ``labelsetUri``.

.. note::

   Not all of labels specified in the ``labelset`` must occur in the output annotations. For example, a ``labelset`` can contain a *catch-all* negative label, but if the negative label can be not interesting enough to keep in the output annotation.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


.. _BoundingBox-v5-labelsetUri:

``labelsetUri``
"""""""""""""""

- type: *string*
- required: no

A URI to an externally defined labelset. Since the ``labelset`` property is a list of simple strings, this URI can be used to point to a more detailed definition of the labelset. This can be a JSON-LD document or a SKOS concept scheme, for example.

.. note::

   Annotations from a classifier app must have this property or ``labelset``.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Thing (v1) <../../Thing/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _BoundingBox-v5-id:

``id``
""""""

- type: *string*
- required: yes

A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       },
       "labelset": {
         "items": {
           "type": "string"
         },
         "type": "array",
         "description": "When an annotation object contains results of a classification task, this property is used to specify the label values used in classification. Individual annotations then must have <code>label</code> property that is one of the values in this list. <br><br> [note] Annotations from a classifier app must have this property or <code>labelsetUri</code>. [/note]<br><br> [note] Not all of labels specified in the <code>labelset</code> must occur in the output annotations. For example, a <code>labelset</code> can contain a <i>catch-all</i> negative label, but if the negative label can be not interesting enough to keep in the output annotation. [/note]"
       },
       "labelsetUri": {
         "type": "string",
         "description": "A URI to an externally defined labelset. Since the <code>labelset</code> property is a list of simple strings, this URI can be used to point to a more detailed definition of the labelset. This can be a JSON-LD document or a SKOS concept scheme, for example. <br><br> [note] Annotations from a classifier app must have this property or <code>labelset</code>. [/note]"
       },
       "label": {
         "type": "string",
         "description": "A label given to this object by classification. The value must be a simple string value of the label and must be one of the values defined in the <code>labelset</code> or <code>labelsetUri</code> properties. <br><br> For example, for the <code>Sentence</code> subtype, this could be used to indicate the type of sentence, such as \"declarative\", \"interrogative\", \"exclamatory\", etc. For <code>NamedEntity</code> subtype, this could be used to indicate the type of named entity, such as \"PER\", \"ORG\", \"LOC\", \"MISC\" (following the CoNLL-2003 labels). <br><br> For non-linguistic annotations, for example for <code>TimeFrame</code>, this could be used to indicate the type of the time frame, such as \"speech\", \"music\", \"noise\", \"bars-and-tones\", etc, for acoustic classification. Or \"slate\", \"lower-third\", \"credits\" for visual classification of video frames. <br><br> [note] Annotations from a type of classifier model must have this property. [/note]"
       },
       "classifications": {
         "additionalProperties": {
           "type": "number"
         },
         "type": "object",
         "description": "Alias for the <code>classification</code> property. Here for historical reasons."
       },
       "classification": {
         "additionalProperties": {
           "type": "number"
         },
         "type": "object",
         "description": "A map from label values to their \"score\" numbers provided by a classifier. The score can be probability, similarity, confidence, or any other real number that was used to determine the label value. <br><br> <i>Optional</i> on top of the <code>label</code> property. However when this property is used, the <code>label</code> property must be one of the keys and the keys must match to the values defined in the <code>labelset</code> or <code>labelsetUri</code> properties."
       },
       "timeUnit": {
         "type": "string",
         "description": "Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*. If not specified, *milliseconds* (in whole numbers) is assumed. <br><br> [note] This property is only relevant for time-based annotations. [/note]"
       },
       "coordinates": {
         "description": "The coordinates of the polygon, taking the top-left of the image as the origin (0,0). Unit used to measure the distance is the number of pixels.",
         "items": {
           "items": {
             "type": "integer"
           },
           "type": "array"
         },
         "type": "array"
       },
       "timePoint": {
         "type": "integer",
         "description": "If on a video stream, the TimePoint that the BoundingBox occurs in."
       },
       "boxType": {
         "type": "string",
         "description": "The type of BoundingBox. Mostly used for text boxes where we use the value text. <br><br> No longer encouraged to use, and instead <code>label</code> property should replace this property."
       }
     },
     "required": [
       "coordinates",
       "id"
     ],
     "type": "object"
   }